# rs-dgraph

./: .editorconfig  Cargo.toml  README.md
dgraph-grpc-client/: Cargo.toml  build.rs
dgraph-grpc-client/protos/: api.proto
dgraph-grpc-client/src/: client.rs  lib.rs
src/: main.rs
