[package]
name = "rs-dgraph"
version = "0.1.0"
authors = ["Simon Liang <no.lhr0909@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dgraph-grpc-client = { path = "dgraph-grpc-client", version = "0.1" }
tokio = { version = "0.2", features = ["macros"] }
tonic = "0.2"
