[package]
name = "dgraph-grpc-client"
version = "0.1.0"
authors = ["Simon Liang <no.lhr0909@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC client
name = "dgraph-client"
path = "src/client.rs"

[dependencies]
tonic = "0.2"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }

[build-dependencies]
tonic-build = "0.2"
